--- a/app/html/perfect.html
+++ b/app/html/perfect.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>完善资料页</title>
-		<link rel="stylesheet" type="text/css" href="../css/perfect2.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/perfect.css"/>
 		<link rel="stylesheet" type="text/css" href="../font/iconfont.css"/>
 		
 	</head>
