--- a/app/html/goods_details.html
+++ b/app/html/goods_details.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<header class="header">
-			<span class="iconfont icon-xiangzuojiantou"></span>
+			<a href="javascript:history.go(-1)" class="iconfont icon-xiangzuojiantou"></a>
 			<div class="btn" id="btn" >
 				<a class="atver" href="#">详情</a>
 				<a href="#">评论</a>
@@ -119,7 +119,7 @@
 			</div>
 		</section>
 		<footer class="footer">
-        <a href="#" class="iconfont icon-gouwuche1" ><span></span></a>
+        <a href="#" class="iconfont icon-gouwuche1" ><span id="goods_num" >12</span></a>
         <a href="#" class="s_cart" id="s_cart" >加入购物车</a>
         <a href="#" class="buy" id="buy">立即购买</a>
 		</footer>
