--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,15 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1" >
 		<title>OYA商城首页</title>
 		<script src="js/jquery-1.12.0.js"></script>
+		<script src="js/jquery.lazyload.min.js"></script>
 		<script src="js/swiper.min.js"></script>
 		<script src="js/index.js"></script>
+		<script src="js/common.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/appelsiini.css"/>
 		<link rel="stylesheet" type="text/css" href="css/swiper.min.css"/>
 		<link rel="stylesheet" type="text/css" href="iconfont/iconfont.css"/>
 		<link rel="stylesheet" type="text/css" href="css/index.min.css"/>
+		<link rel="stylesheet" type="text/css" href="css/common.min.css"/>
 		
 	</head>
 	<body>
