--- a/app/html/myvault.html
+++ b/app/html/myvault.html
@@ -4,31 +4,35 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<link rel="stylesheet" href="../css/myvault.css" />
-		<link href="../font/iconfont.css" rel="stylesheet"/>
+		<link href="../iconfont/iconfont.css" rel="stylesheet">
 		<title></title>
 		<script src="../js/zepto/dist/zepto.js"></script>
 		<script src="../js/zepto/src/ajax.js"></script>
+		<script src="../js/zepto/src/touch.js"></script>
 		<script src="../js/myvault.js"></script>
 		
 	</head>
 	<body>
 		<header>
-			<span class="iconfont icon-fanhui">
+			<a class="iconfont icon-fanhui">
 				
-			</span>
+			</a>
 			<span>
 				我的金库
 			</span>
 			<span class="iconfont icon-liebiao">
-				
+				<div class="caidan">
+				<ul>
+					<li>首页</li>
+					<li>积分区</li>
+					<li>夺宝区</li>
+					<li>分类</li>
+					<li>购物车</li>
+					<li>个人中心</li>
+				</ul>
+			   </div>
 			</span>
-			<div class="caidan">
-				<span>首页</span>
-				<span>积分区</span>
-				<span>夺宝区</span>
-				<span>购物车</span>
-				<span>个人中心</span>
-			</div>
+			
 		</header>
 		<section class="commission">
 			<div class="commission_left">
