--- a/app/index.html
+++ b/app/index.html
@@ -18,12 +18,12 @@
 	</head>
 	<body>
 		<div class="box">
-			<div class="header">
+			<header class="header">
 				OYA商城
 				<!--搜索-->
 				<div class="search"><i class="iconfont" >&#xf004c;</i> </div>
-			</div>
-			<div class="banner">
+			</header>
+			<section class="banner">
 				<!--轮播图-->
 				<div class="carousel">
 					<div class="swiper-container">
@@ -39,27 +39,22 @@
 					    <div class="swiper-pagination"></div>
 					</div>
 				</div>
+				<!--精选品类-->
 				<div class="jingxuan"><img src="img/41.jpg" /></div>
+				<!--女装-->
 				<div class="nvzhuang"><a href="#"><img src="img/31.jpg" /></a></div>
+				<!--两列图片-->
 				<div class="datalist1"></div>
+				<!--图片（带遮罩层）-->
 				<div class="datalist2"></div>
+				<!--美妆-->
 				<div class="meizhuang"><img src="img/38.jpg" /></div>
+				<!--图片（价格 信息）-->
 				<div class="datalist3"></div>
-				<!--<div class="datalist4">
-					<img class="lazy" data-original="img/32.jpg" alt="" />
-					<img class="lazy" data-original="img/32.jpg" alt="" />
-					<img class="lazy" data-original="img/32.jpg" alt="" />
-					<img class="lazy" data-original="img/32.jpg" alt="" />
-					<img class="lazy" data-original="img/32.jpg" alt="" />
-					<img class="lazy" data-original="img/32.jpg" alt="" />
-					<img class="lazy" data-original="img/32.jpg" alt="" />
-					<img class="lazy" data-original="img/32.jpg" alt="" />
-					<img class="lazy" data-original="img/32.jpg" alt="" />
-				</div>-->
-				
-			</div>
+			</section>
+			
 			<!--底部-->
-			<div class="footer">
+			<footer class="footer">
 				<ul class="list">
 					<li><a href="index.html"><i class="iconfont" id="homeicon1">&#xe61f;</i><div class="text">首页</div></a></li>
 					<li><a href="#"><i class="iconfont" id="homeicon2">&#xe654;</i><div class="text">积分</div></a></li>
@@ -67,15 +62,15 @@
 					<li><a href="html/shoppingcart.html"><i class="iconfont" id="homeicon4">&#xe629;</i><div class="text">购物车</div></a></li>
 					<li><a href="html/center.html"><i class="iconfont" id="homeicon5">&#xe65a;</i><div class="text">个人中心</div></a></li>
 				</ul>
-			</div>
+			</footer>
 			
 			<!--回到顶部-->
 			<div class="comeback"><i class="iconfont" id="iconback">&#xe61c;</i></div>
 			
 		</div>
+	
 	<script>
-
-
+		
 	</script>
 	</body>
 </html>
