--- a/app/html/shoppingcart.html
+++ b/app/html/shoppingcart.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width = device-width,initial-scale=1" />
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="../font/iconfont.css" />
+		<link rel="stylesheet" type="text/css" href="../iconfont/iconfont.css" />
 		<link rel="stylesheet" type="text/css" href="../css/shoppingcart.min.css" />
 		<script type="text/javascript" src="../js/zepto/dist/zepto.min.js"></script>
 		<script src="../js/zepto/src/touch.js"></script>
@@ -14,7 +14,7 @@
 
 	<body>
 		<header>
-			<a class="iconfont icon-fanhui">
+			<a href="javascript:history.go(-1)" class="iconfont icon-fanhui">
 				
 			</a>
 			<span>
@@ -41,9 +41,9 @@
 		</section>
 
 		<footer class="footer">
-			<label><input type="checkbox" name="" id="allcheck" value="" />全选</label>
+			<label id="allcheck"><input type="checkbox" name="" value="" />全选</label>
 			<a href="#" class="pay_way" id="pay_way">支付方式></a>
-			<a href="#" class="buy" id="buy">确认支付(<span></span>)</a>
+			<a href="#" class="buy" id="buy">确认支付(<span>0</span>)</a>
 		</footer>
 	</body>
 
