--- a/app/html/myorder.html
+++ b/app/html/myorder.html
@@ -4,7 +4,9 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<title></title>
+		<link rel="stylesheet" href="../css/reset.css" />
 		<link rel="stylesheet" href="../css/myorder.css" />
+		<!--<link rel="stylesheet" href="../css/common.css" />-->
 		<link href="../iconfont/iconfont.css" rel="stylesheet">
 		<script src="../js/zepto/dist/zepto.js"></script>
 		<script src="../js/zepto/src/ajax.js"></script>
@@ -13,13 +15,14 @@
 	</head>
 	<body>
 		<header>
-			<a class="iconfont icon-fanhui">
+			<a class="iconfont icon-fanhui" href="javascript:history.go(-1)">
 				
 			</a>
 			<span>
 				我的订单
 			</span>
-			<span class="iconfont icon-liebiao">
+			<span class="liebiao">
+				<span class="iconfont icon-liebiao"></span>
 				<div class="caidan">
 				<ul>
 					<li><a href="../index.html">首页</a></li>
@@ -40,14 +43,35 @@
 			<span>待收货</span>
 			<span>待评价</span>
 		</section>
-		<footer>
-			<nav>
-				<a href="#shouye"><span class="iconfont icon-shouye"></span><span>首页</span> </a>
-				<a href="#jifen"><span class="iconfont icon-jifen"></span><span>积分区</span></a>
-				<a href="#mofang"><span class="iconfont icon-mofang"></span><span>分类</span></a>
-				<a href="#mofang"><span class="iconfont icon-cart"></span><span>购物车</span></a>
-				<a href="#mofang"><span class="iconfont icon-gerenzhongxin"></span><span>个人中心</span></a>
-			</nav>
-		</footer>
+		<section class="order_details">
+			<!--<div>
+				<div class="header"><span>店铺一</span><span>交易完成</span></div>
+				<div class="content">
+					<section><img src="../img/59.jpg">
+					<div><span>黑灰色短裙连衣裙</span>
+						<span>120</span>
+					</div>
+					<span>2</span>
+					</section>
+				</div>
+				<div class="total">
+					共<span>1</span>件商品，合计：<span>120</span>
+				</div>
+				<div class="btn">
+					<span>付款</span>
+					<span>删除订单</span>
+					<span>查看物流</span>
+				</div>
+			</div>-->
+		</section>
+		<footer class="footer">
+				<ul class="list">
+					<li><a href="#"><i class="iconfont" id="homeicon1">&#xe61f;</i><div class="text">首页</div></a></li>
+					<li><a href="#"><i class="iconfont" id="homeicon2">&#xe654;</i><div class="text">积分</div></a></li>
+					<li><a href="#"><i class="iconfont" id="homeicon3">&#xe6d0;</i><div class="text">分类</div></a></li>
+					<li><a href="#"><i class="iconfont" id="homeicon4">&#xe629;</i><div class="text">购物车</div></a></li>
+					<li><a href="#"><i class="iconfont" id="homeicon5">&#xe65a;</i><div class="text">个人中心</div></a></li>
+				</ul>
+			</footer>
 	</body>
 </html>
