--- a/app/html/list.html
+++ b/app/html/list.html
@@ -4,9 +4,10 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>列表页</title>
-		
+		<link rel="stylesheet" type="text/css" href="../css/common.css"/><!--公用底部-->
 		<link rel="stylesheet" type="text/css" href="../css/list.css"/>
 		<link rel="stylesheet" type="text/css" href="../iconfont/iconfont.css"/>
+		
 		<script src="../js/jquery-1.12.0.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/touch.js" type="text/javascript" charset="utf-8"></script>
@@ -26,28 +27,28 @@
 			<article>
 				<!--头部菜单-->
 				<span class="headerlist">
-					<a href="#">首页</a>
-					<a>积分区</a>
-					<a>夺宝区</a>
-					<a>分类</a>
-					<a>购物车</a>
-					<a>个人中心</a>			
+					<a href="../index.html">首页</a>
+					<a href="#">积分区</a>
+					<a href="#">夺宝区</a>
+					<a href="list.html">分类</a>
+					<a href="shoppingcart.html">购物车</a>
+					<a href="center.html">个人中心</a>			
 				</span>		
 
 				<!--主体内容-->
 				<nav>
 					<!--左列表-->
-					<ul>
-						<li class="active">热门推荐</li>
-						<li class="click">潮流女装</li>
-						<li class="click">品牌女装</li>
-						<li>护肤化妆</li>
-						<li>家用电器</li>
-						<li>热门推荐</li>
-						<li>潮流女装</li>
-						<li>品牌女装</li>
-						<li>护肤化妆</li>
-						<li>家用电器</li>
+					<ul class="nav">
+						<li class="nobg"><a class="color" href="#">热门推荐</a></li>
+						<li><a href="#">潮流女装</a></li>
+						<li><a href="#">品牌女装</a></li>
+						<li><a href="#">护肤化妆</a></li>
+						<li><a href="#">家用电器</a></li>
+						<li><a href="#">热门推荐</a></li>
+						<li><a href="#">潮流女装</a></li>
+						<li><a href="#">品牌女装</a></li>
+						<li><a href="#">护肤化妆</a></li>
+						<li><a href="#">家用电器</a></li>
 					</ul>
 				</nav>
 				<article>
@@ -55,25 +56,32 @@
 					<h1 class="tip">热门推荐</h1>
 					<ul class="datalist">
 						<!--<li class="li">
-							<img class="img" src="../img/21.jpg"/>
+							<img class="img" src="../img/54.jpg"/>
 							<p class="p">iPad</p>
-						</li>-->										     
+						</li>						-->
+							
 					</ul>
-
 				</article>
 			</article>
 
-			<footer>
 				<!--固定底部-->
-				<ul>
-					<li><span class="iconfont icon-shouye"></span><span>首页</span></li>
-					<li><span class="iconfont icon-jifen"></span><span>积分区</span></li>
-					<li><span class="iconfont icon-mofang"></span><span>分类</span></li>
-					<li><span class="iconfont icon-cart"></span><span>购物车</span></li>
-					<li><span class="iconfont icon-gerenzhongxin"></span><span>个人中心</span></li>
-				</ul>
-			</footer>
+				<footer class="footer">
+					<ul class="list">
+						<li><a href="../index.html"><i class="iconfont" id="homeicon1">&#xe61f;</i><div class="text">首页</div></a></li>
+						<li><a href="#"><i class="iconfont" id="homeicon2">&#xe654;</i><div class="text">积分</div></a></li>
+						<li class="active"><a href="list.html"><i class="iconfont" id="homeicon3">&#xe6d0;</i><div class="text">分类</div></a></li>
+						<li><a href="shoppingcart.html"><i class="iconfont" id="homeicon4">&#xe629;</i><div class="text">购物车</div></a></li>
+						<li><a href="center.html"><i class="iconfont" id="homeicon5">&#xe65a;</i><div class="text">个人中心</div></a></li>
+					</ul>
+				</footer>
+			
+			
+			
+			
 		</section>
+		
+		
+		
 		
 	</body>
 </html>
