订单 金库 登录

--- a/app/html/register.html
+++ b/app/html/register.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="../css/reset.css" />
 		<link rel="stylesheet" href="../css/register.css" />
 		<link href="../iconfont/iconfont.css" rel="stylesheet">
+		<script src="../js/zepto/dist/zepto.js"></script>
+		<script src="../js/zepto/src/touch.js"></script>
+		<script src="../js/register.js"></script>
 		<title></title>
 	</head>
 	<body>
@@ -33,8 +36,8 @@
 		</header>
 		<section>
 		<form action="center.html" method="get">
-			<p class="phone"><input type="text" value="86" placeholder="国家编码" /><input type="text" id="phone" value="" placeholder="手机号码"></p>
-			<p class="password"><input type="password" id="password" value="" placeholder="密码"></p>
+			<p class="phone"><input type="text" value="86" placeholder="国家编码" /><input type="text" id="phone" value="" placeholder="手机号码"><span class="prompt"></span></p>
+			<p class="password"><input type="password" id="password" value="" placeholder="密码"><span class="prompt1"></span></p>
 			<p class="btn"><input type="submit" value="登录"></p>
 		</form>
 		</section>
