--- a/app/html/myvault.html
+++ b/app/html/myvault.html
@@ -62,11 +62,11 @@
 		
 		<footer class="footer">
 				<ul class="list">
-					<li><a href="#"><i class="iconfont" id="homeicon1">&#xe61f;</i><div class="text">首页</div></a></li>
-					<li><a href="#"><i class="iconfont" id="homeicon2">&#xe654;</i><div class="text">积分</div></a></li>
-					<li><a href="#"><i class="iconfont" id="homeicon3">&#xe6d0;</i><div class="text">分类</div></a></li>
-					<li><a href="#"><i class="iconfont" id="homeicon4">&#xe629;</i><div class="text">购物车</div></a></li>
-					<li><a href="#"><i class="iconfont" id="homeicon5">&#xe65a;</i><div class="text">个人中心</div></a></li>
+					<li><a href="../index.html"><i class="iconfont" id="homeicon1">&#xe61f;</i><div class="text">首页</div></a></li>
+					<li><a href="list.html"><i class="iconfont" id="homeicon2">&#xe654;</i><div class="text">积分</div></a></li>
+					<li><a href="list.html"><i class="iconfont" id="homeicon3">&#xe6d0;</i><div class="text">分类</div></a></li>
+					<li><a href="shoppingcart.html"><i class="iconfont" id="homeicon4">&#xe629;</i><div class="text">购物车</div></a></li>
+					<li><a href="center.html"><i class="iconfont" id="homeicon5">&#xe65a;</i><div class="text">个人中心</div></a></li>
 				</ul>
 			</footer>
 	</body>
