--- a/app/html/login.html
+++ b/app/html/login.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<link rel="stylesheet" href="../css/reset.css" />
-		<link rel="stylesheet" href="../css/register.css" />
+		<link rel="stylesheet" href="../css/login.css" />
 		<link href="../iconfont/iconfont.css" rel="stylesheet">
 		<script src="../js/zepto/dist/zepto.js"></script>
 		<script src="../js/zepto/src/touch.js"></script>
