头部公用样式和js

--- a/app/html/myvault.html
+++ b/app/html/myvault.html
@@ -5,20 +5,25 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<link rel="stylesheet" href="../css/reset.css" />
 		<link rel="stylesheet" href="../css/myvault.css" />
+		<link rel="stylesheet" href="../css/header_common.css">
 		<link href="../iconfont/iconfont.css" rel="stylesheet">
 		<link rel="stylesheet" href="../css/common.css">
 		<title></title>
 		<script src="../js/zepto/dist/zepto.js"></script>
 		<script src="../js/zepto/src/ajax.js"></script>
 		<script src="../js/zepto/src/touch.js"></script>
+		<script src="../js/header_common.js"></script>
 		<script src="../js/myvault.js"></script>
 		
 	</head>
 	<body>
 		<header>
-			<a class="iconfont icon-fanhui" href="javascript:history.go(-1)">
+			<span>
+				<a class="iconfont icon-fanhui" href="javascript:history.go(-1)">
 				
 			</a>
+			</span>
+			
 			<span>
 				我的金库
 			</span>
@@ -29,10 +34,10 @@
 				<div class="caidan">
 				<ul>
 					<li><a href="../index.html">首页</a></li>
-					<li><a href="center.html">积分区</a></li>
+					<li><a href="list.html">积分区</a></li>
 					<li><a href="list.html">夺宝区</a></li>
 					<li><a href="list.html">分类</a></li>
-					<li><a href="goods_details.html">购物车</a></li>
+					<li><a href="shoppingcart.html">购物车</a></li>
 					<li><a href="center.html">个人中心</a></li>
 				</ul>
 			   </div>
