--- a/app/html/shoppingcart.html
+++ b/app/html/shoppingcart.html
@@ -43,7 +43,7 @@
 		<footer class="footer">
 			<label id="allcheck"><input type="checkbox" name="" value="" />全选</label>
 			<a href="#" class="pay_way" id="pay_way">支付方式></a>
-			<a href="#" class="buy" id="buy">确认支付(<span>0</span>)</a>
+			<a href="myorder.html" class="buy" id="buy">确认支付(<span>0</span>)</a>
 		</footer>
 	</body>
 
