--- a/app/html/login.html
+++ b/app/html/login.html
@@ -5,30 +5,33 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<link rel="stylesheet" href="../css/reset.css" />
 		<link rel="stylesheet" href="../css/login.css" />
+		<link rel="stylesheet" href="../css/header_common.css">
 		<link href="../iconfont/iconfont.css" rel="stylesheet">
 		<script src="../js/zepto/dist/zepto.js"></script>
 		<script src="../js/zepto/src/touch.js"></script>
-		<script src="../js/register.js"></script>
+		<script src="../js/header_common.js"></script>
+		<script src="../js/login.js"></script>
 		<title></title>
 	</head>
 	<body>
 		<header>
-			<a class="iconfont icon-fanhui" href="javascript:history.go(-1)">
-				
+			<span><a class="iconfont icon-fanhui" href="javascript:history.go(-1)">
+		
 			</a>
+			</span>
 			<span>
 				登录
 			</span>
-			<span>
+			<span class="liebiao">
 				<span class="iconfont icon-liebiao"></span>
 				<div class="caidan">
 				<ul>
 					<li><a href="../index.html">首页</a></li>
-					<li><a>积分区</a></li>
-					<li><a>夺宝区</a></li>
-					<li><a>分类</a></li>
-					<li><a>购物车</a></li>
-					<li><a>个人中心</a></li>
+					<li><a href="list.html">积分区</a></li>
+					<li><a href="list.html">夺宝区</a></li>
+					<li><a href="list.html">分类</a></li>
+					<li><a href="shoppingcart.html">购物车</a></li>
+					<li><a href="center.html">个人中心</a></li>
 				</ul>
 			   </div>
 			</span>
