--- a/app/html/myorder.html
+++ b/app/html/myorder.html
@@ -6,18 +6,23 @@
 		<title></title>
 		<link rel="stylesheet" href="../css/reset.css" />
 		<link rel="stylesheet" href="../css/myorder.css" />
-		<!--<link rel="stylesheet" href="../css/common.css" />-->
+		<link rel="stylesheet" href="../css/header_common.css">
+		
 		<link href="../iconfont/iconfont.css" rel="stylesheet">
 		<script src="../js/zepto/dist/zepto.js"></script>
 		<script src="../js/zepto/src/ajax.js"></script>
 		<script src="../js/zepto/src/touch.js"></script>
+		<script src="../js/header_common.js"></script>
 		<script src="../js/myorder.js"></script>
+		
 	</head>
 	<body>
 		<header>
-			<a class="iconfont icon-fanhui" href="javascript:history.go(-1)">
-				
-			</a>
+			<span>
+				<a class="iconfont icon-fanhui" href="javascript:history.go(-1)">
+				</a>
+			</span>
+			
 			<span>
 				我的订单
 			</span>
@@ -26,11 +31,11 @@
 				<div class="caidan">
 				<ul>
 					<li><a href="../index.html">首页</a></li>
-					<li><a>积分区</a></li>
-					<li><a>夺宝区</a></li>
-					<li><a>分类</a></li>
-					<li><a>购物车</a></li>
-					<li><a>个人中心</a></li>
+					<li><a href="list.html">积分区</a></li>
+					<li><a href="list.html">夺宝区</a></li>
+					<li><a href="list.html">分类</a></li>
+					<li><a href="shoppingcart.html">购物车</a></li>
+					<li><a href="center.html">个人中心</a></li>
 				</ul>
 			   </div>
 			</span>
