完善首页、列表页

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="css/swiper.min.css"/>
 		<link rel="stylesheet" type="text/css" href="iconfont/iconfont.css"/>
 		<link rel="stylesheet" type="text/css" href="css/index.min.css"/>
-		<link rel="stylesheet" type="text/css" href="css/common.min.css"/>
+		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 		
 	</head>
 	<body>
@@ -21,7 +21,7 @@
 			<header class="header">
 				OYA商城
 				<!--搜索-->
-				<div class="search"><i class="iconfont" >&#xf004c;</i> </div>
+				<div class="search"><i class="iconfont" >&#xf004c;</i></div>
 			</header>
 			<section class="banner">
 				<!--轮播图-->
@@ -56,9 +56,9 @@
 			<!--底部-->
 			<footer class="footer">
 				<ul class="list">
-					<li><a href="index.html"><i class="iconfont" id="homeicon1">&#xe61f;</i><div class="text">首页</div></a></li>
-					<li><a href="#"><i class="iconfont" id="homeicon2">&#xe654;</i><div class="text">积分</div></a></li>
-					<li><a href="#"><i class="iconfont" id="homeicon3">&#xe6d0;</i><div class="text">分类</div></a></li>
+					<li><a href="index.html"><i class="iconfont" id="homeicon1">&#xe61f;</i><div class="text" style="color: #8e488e;">首页</div></a></li>
+					<li><a href="html/list.html"><i class="iconfont" id="homeicon2">&#xe654;</i><div class="text">积分</div></a></li>
+					<li><a href="html/list.html"><i class="iconfont" id="homeicon3">&#xe6d0;</i><div class="text">分类</div></a></li>
 					<li><a href="html/shoppingcart.html"><i class="iconfont" id="homeicon4">&#xe629;</i><div class="text">购物车</div></a></li>
 					<li><a href="html/center.html"><i class="iconfont" id="homeicon5">&#xe65a;</i><div class="text">个人中心</div></a></li>
 				</ul>
@@ -68,9 +68,5 @@
 			<div class="comeback"><i class="iconfont" id="iconback">&#xe61c;</i></div>
 			
 		</div>
-	
-	<script>
-		
-	</script>
 	</body>
 </html>
