(1)列表页,完善资料已经完成(2)有待将头部样式使用公用样式

--- a/app/html/perfect.html
+++ b/app/html/perfect.html
@@ -24,16 +24,6 @@
 				<span class="iconfont icon-liebiao"></span>
 			</header>
 			<article>
-				
-				<!--头部菜单-->
-				<!--<span class="headerlist">
-					<a href="#">首页</a>
-					<a>积分区</a>
-					<a>夺宝区</a>
-					<a>分类</a>
-					<a>购物车</a>
-					<a>个人中心</a>			
-				</span>-->
 
 				<!--主体表单-->
 				<p class="user">
@@ -50,19 +40,19 @@
 					<span>收货地址</span>
 					<p>
 						<input type="text" list="province" placeholder="选择省" id="list_1" />
-						<datalist id="province">
+						<datalist id="province" class="province">
 						</datalist>
 						
 						<input type="text" list="city" placeholder="选择市" id="list_2" />
-						<datalist id="city">
+						<datalist id="city" class="city">
 						</datalist>
 
 						<input type="text" list="county" placeholder="选择区/县" id="list_3" />
 						<datalist id="county">
 							<option value="天河" label="">天河</option>
-							<option value="天河" label="">天河</option>
-							<option value="天河" label="">天河</option>
-							<option value="天河" label="">天河</option>
+							<option value="白云" label="">白云</option>
+							<option value="海珠" label="">海珠</option>
+							<option value="增城" label="">增城</option>
 							<option value="天河" label="">天河</option>
 						</datalist>
 
