注册页面完成

--- a/app/html/zhuce.html
+++ b/app/html/zhuce.html
@@ -34,7 +34,7 @@
 	<form id="register" class="reg_form" >
 		
 		<label class="phone" ><span>86</span><input type="telephone" id="mobile" name="mobile" pattern="1[3578]\d{9}" placeholder="手机号码" ></label>
-		<label class="checknumber">	<input type="text" id="checknumber" name="checknumber" placeholder="短信验证码"><span>获取验证码</span></label>
+		<label class="checknumber">	<input type="text" id="checknumber" name="checknumber" placeholder="验证码"><span id="checknum" class="checknum" ></span> <span id="get" class="get" >重新获取</span></label>
 		<label class="password" ><input type="password" id="mima1" name="password" placeholder="输入密码(第一个字必须为字母6~16位)" ></label>
 		<label class="password" ><input type="password" id="mima2" name="password"  placeholder="确认密码(第一个字必须为字母6~16位)" pattern="^[a-zA-Z]\w{5,15}$" ></label>
 		<label class="phone" ><span>86</span><input type="telephone"  name="mobile" pattern="1[3578]\d{9}" placeholder="推荐人帐号(可选)" ></label>
