注册登录完善中

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -44,6 +44,6 @@
 			<p class="btn"><input type="submit" value="登录"></p>
 		</form>
 		</section>
-		
+		<div class="zhuce"><span>没有帐号?<a href="zhuce.html">去注册</a></span></div>
 	</body>
 </html>
