--- a/app/html/zhuce.html
+++ b/app/html/zhuce.html
@@ -46,7 +46,7 @@
 	<div class="succeedbg" id="succeed" >
 		<div class="succeed">
 		<h2>恭喜您，注册成功！</h2>
-		<a href="#">返回首页</a><a href="#">去登录</a>		
+		<a href="../index.html">返回首页</a><a href="login.html">去登录</a>		
 	</div>
 	<div id="close" class="close">
 		ⓧ
