更换插件路径

--- a/app/html/myorder.html
+++ b/app/html/myorder.html
@@ -9,9 +9,9 @@
 		<link rel="stylesheet" href="../css/header_common.css">
 		
 		<link href="../iconfont/iconfont.css" rel="stylesheet">
-		<script src="../js/zepto/dist/zepto.js"></script>
-		<script src="../js/zepto/src/ajax.js"></script>
-		<script src="../js/zepto/src/touch.js"></script>
+		<script src="../assets/zepto/dist/zepto.js"></script>
+		<script src="../assets/zepto/src/ajax.js"></script>
+		<script src="../assets/zepto/src/touch.js"></script>
 		<script src="../js/header_common.js"></script>
 		<script src="../js/myorder.js"></script>
 		
