--- a/app/html/myvault.html
+++ b/app/html/myvault.html
@@ -9,9 +9,9 @@
 		<link href="../iconfont/iconfont.css" rel="stylesheet">
 		<link rel="stylesheet" href="../css/common.css">
 		<title></title>
-		<script src="../js/zepto/dist/zepto.js"></script>
-		<script src="../js/zepto/src/ajax.js"></script>
-		<script src="../js/zepto/src/touch.js"></script>
+		<script src="../assets/zepto/dist/zepto.js"></script>
+		<script src="../assets/zepto/src/ajax.js"></script>
+		<script src="../assets/zepto/src/touch.js"></script>
 		<script src="../js/header_common.js"></script>
 		<script src="../js/myvault.js"></script>
 		
