--- a/app/html/login.html
+++ b/app/html/login.html
@@ -7,8 +7,8 @@
 		<link rel="stylesheet" href="../css/login.css" />
 		<link rel="stylesheet" href="../css/header_common.css">
 		<link href="../iconfont/iconfont.css" rel="stylesheet">
-		<script src="../js/zepto/dist/zepto.js"></script>
-		<script src="../js/zepto/src/touch.js"></script>
+		<script src="../assets/zepto/dist/zepto.js"></script>
+		<script src="../assets/zepto/src/touch.js"></script>
 		<script src="../js/header_common.js"></script>
 		<script src="../js/login.js"></script>
 		<title></title>
