列表页和完善资料,路径修改完成

--- a/app/html/list.html
+++ b/app/html/list.html
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>列表页分类</title>
-		<link rel="stylesheet" type="text/css" href="../css/list.css"/>	<!--list-css-->	
 		<link rel="stylesheet" type="text/css" href="../css/common.css"/><!--公用底部-->
 		<link rel="stylesheet" type="text/css" href="../iconfont/iconfont.css"/><!--字体图标-->
 		<link rel="stylesheet" type="text/css" href="../css/header_common.css"/><!--头部公用样式-->		
+		<link rel="stylesheet" type="text/css" href="../css/list.css"/>	<!--list-css-->	
+		<script src="../assets/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../assets/zepto/dist/zepto.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../assets/zepto/src/touch.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/header_common.js" type="text/javascript" charset="utf-8"></script><!--共用头部js-->
-		<script src="../js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/touch.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/list.js" type="text/javascript" charset="utf-8"></script><!--list-js-->
 		
 	</head>
