--- a/app/html/perfect.html
+++ b/app/html/perfect.html
@@ -5,15 +5,15 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 		<title>完善资料页</title>
-		<link rel="stylesheet" type="text/css" href="../css/perfect.css" /><!--perfect-css-->
 		<link rel="stylesheet" type="text/css" href="../iconfont/iconfont.css" /><!--字体图标-->
 		<link rel="stylesheet" type="text/css" href="../css/common.css"/><!--公用底部-->
 		<link rel="stylesheet" type="text/css" href="../css/header_common.css"/><!--公用头部-->
-		<script src="../js/zepto/dist/zepto.js"></script>
-		<script src="../js/touch.js" type="text/javascript" charset="utf-8"></script>
+		<link rel="stylesheet" type="text/css" href="../css/perfect.css" /><!--perfect-css-->
+		<script src="../assets/zepto/dist/zepto.js"></script>
+		<script src="../assets/zepto/src/touch.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../assets/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/perfect.js" type="text/javascript" charset="utf-8"></script><!--perfect-js-->
 		<script src="../js/header_common.js" type="text/javascript" charset="utf-8"></script><!--公用头部-->
-		<script src="../js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
 
 	</head>
 
