--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1" >
 		<title>OYA商城首页</title>
-		<script src="js/jquery-2.1.1.js"></script>
-		<script src="js/jquery.lazyload.min.js"></script>
-		<script src="js/swiper.min.js"></script>
+		<script src="assets/jquery-2.1.1.js"></script>
+		<script src="assets/jquery.lazyload.min.js"></script>
+		<script src="assets/swiper.min.js"></script>
 		<script src="js/index.js"></script>
 		<script src="js/common.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/appelsiini.css"/>
