购物车实现添加订单时同时删除购物车指定商品

--- a/app/html/zhuce.html
+++ b/app/html/zhuce.html
@@ -6,8 +6,8 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../iconfont/iconfont.css" />
 		<link rel="stylesheet" type="text/css" href="../css/zhuce.min.css" />
-		<script type="text/javascript" src="../js/zepto/dist/zepto.min.js"></script>
-		<script src="../js/zepto/src/touch.js"></script>
+		<script type="text/javascript" src="../assets/zepto/dist/zepto.min.js"></script>
+		<script src="../assets/zepto/src/touch.js"></script>
 		<script type="text/javascript" src="../js/zhuce.js"></script>		
 	</head>
 	<body>
