--- a/app/html/goods_details.html
+++ b/app/html/goods_details.html
@@ -5,13 +5,12 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width = device-width,initial-scale=1" />
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="../js/swiper/dist/css/swiper.min.css" />
+		<link rel="stylesheet" type="text/css" href="../assets/swiper/dist/css/swiper.min.css" />
 		<link rel="stylesheet" type="text/css" href="../iconfont/iconfont.css" />
 		<link rel="stylesheet" type="text/css" href="../css/goods_details.min.css" />
-		<script type="text/javascript" src="../js/zepto/dist/zepto.min.js"></script>
-		<script src="../js/zepto/src/touch.js"></script>
-		<script src="../js/swiper/dist/js/swiper.min.js"></script>
-		<script src="../js/swiper/dist/js/swiper.jquery.min.js"></script>
+		<script type="text/javascript" src="../assets/zepto/dist/zepto.min.js"></script>
+		<script src="../assets/zepto/src/touch.js"></script>
+		<script src="../assets/swiper/dist/js/swiper.min.js"></script>
 		<script type="text/javascript" src="../js/goods_details.js"></script>
 	</head>
 
