--- a/app/html/goods_details.html
+++ b/app/html/goods_details.html
@@ -135,7 +135,7 @@
 		<footer class="footer">
         <a href="shoppingcart.html" class="iconfont icon-cart" ><span id="goods_num" ></span></a>
         <a href="#" class="s_cart" id="s_cart" >加入购物车</a>
-        <a href="#" class="buy" id="buy">立即购买</a>
+        <a href="shoppingcart.html" class="buy" id="buy">立即购买</a>
 		</footer>
 	</body>
 
